# postings_api

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  enums.py  errors.py  main.py
app/core/: db.py
app/models/: __init__.py
app/routers/: __init__.py  health.py  jobs.py
app/schemas/: __init__.py  job.py
app/services/: __init__.py
